--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,72 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+:root
+{
+    font-size: 18px;
+}
+
+.container
+{
+    margin: 0 auto;
+    padding: 0;
+    font-family: sans-serif;
+    width: 85%;
+}
+
+body
+{
+    font-family: -apple-system, BlinkMacSystemFont, "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: 1rem;
+    margin: 20px;
+}
+
+ol, ul
+{
+    padding-left: 30px;
+}
+
+.board-row:after
+{
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.status
+{
+    margin-bottom: 10px;
+}
+
+.square
+{
+    background: #fff;
+    border: 0.1rem solid #999;
+    float: left;
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 3rem;
+    height: 3rem;
+    margin: -0.05rem -0.05rem 0 0;
+    padding: 0;
+    text-align: center;
+    width: 3rem;
+}
+
+.square:focus
+{
+    outline: none;
+}
+
+.kbdnavigation .square:focus
+{
+    background: #ddd;
+}
+
+.game
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.game-info
+{
+    margin-left: 1rem;
 }
