--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root
 {
     font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 .container
@@ -13,7 +14,7 @@
 
 body
 {
-    font-family: -apple-system, BlinkMacSystemFont, "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     font-size: 1rem;
     margin: 20px;
 }
@@ -32,11 +33,13 @@ ol, ul
 
 .status
 {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     margin-bottom: 10px;
 }
 
 .square
 {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
     background: #fff;
     border: 0.1rem solid #999;
     float: left;
