--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -72,15 +72,21 @@
 body {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
   font-size: 1rem;
-  margin: 20px; }
+  margin: 1rem; }
 
 ol, ul {
   padding-left: 30px; }
 
-.board-row:after {
-  clear: both;
-  content: "";
-  display: table; }
+/*.board-row:after
+{
+    clear: both;
+    content: "";
+    display: table;
+}*/
+.board-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
 
 .status {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
@@ -90,7 +96,8 @@ ol, ul {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
   background: #fff;
   border: 0.1rem solid #999;
-  float: left;
+  /*float: left;*/
+  justify-content: center;
   font-size: 2rem;
   font-weight: bold;
   line-height: 3rem;
@@ -122,17 +129,31 @@ ol, ul {
 .game-title {
   font-weight: bold;
   text-align: center;
-  margin: 1rem 0;
-  font-size: 2rem; }
+  margin: 1rem 0; }
+  @media screen and (max-width: 55.8rem) {
+    .game-title {
+      font-size: 1.5rem; } }
+  @media screen and (min-width: 55.8rem) {
+    .game-title {
+      font-size: 2rem; } }
 
-@media screen and (max-width: 34.5rem) {
-  .game-info {
-    margin-top: 1rem; } }
-@media screen and (min-width: 34.5rem) {
-  .game-info {
-    margin-left: 1rem; } }
+.game-info {
+  text-align: center; }
+  @media screen and (max-width: 34.5rem) {
+    .game-info {
+      margin-top: 1rem; } }
+  @media screen and (min-width: 34.5rem) {
+    .game-info {
+      margin-left: 1rem; } }
 
 .game-board {
   justify-content: center; }
+
+.game-reset {
+  padding: 0.05rem;
+  text-align: center;
+  margin: 1rem;
+  border: 0.05rem solid black;
+  cursor: pointer; }
 
 /*# sourceMappingURL=index.css.map */
