--- a/src/styles/scss/_board.scss
+++ b/src/styles/scss/_board.scss
@@ -17,7 +17,7 @@ body
 {
     font-family: $normal-font;
     font-size: 1rem;
-    margin: 20px;
+    margin: 1rem;
 }
 
 ol, ul
@@ -25,11 +25,17 @@ ol, ul
     padding-left: 30px;
 }
 
-.board-row:after
+/*.board-row:after
 {
     clear: both;
     content: "";
     display: table;
+}*/
+.board-row
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .status
@@ -43,7 +49,8 @@ ol, ul
     font-family: $normal-font;
     background: #fff;
     border: 0.1rem solid #999;
-    float: left;
+    /*float: left;*/
+    justify-content: center;
     font-size: 2rem;
     font-weight: bold;
     line-height: 3rem;
@@ -87,11 +94,19 @@ ol, ul
     font-weight: bold;
     text-align: center;
     margin: 1rem 0;
-    font-size: 2rem;
+    @include until($tablet)
+    {
+        font-size: 1.5rem;
+    }
+    @include from($tablet)
+    {
+        font-size: 2rem;
+    }
 }
 
 .game-info
 {
+    text-align: center;
     @include until($mobile)
     {
         margin-top: 1rem;
@@ -105,4 +120,13 @@ ol, ul
 .game-board
 {
     justify-content: center;
+}
+
+.game-reset
+{
+    padding: 0.05rem;
+    text-align: center;
+    margin: 1rem;
+    border: 0.05rem solid black;
+    cursor: pointer;
 }
