--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -3,4 +3,10 @@
 @import 'config';
 @import 'root';
 @import 'screens';
+
+@import 'app';
+@import 'square';
 @import 'board';
+@import 'game/game';
+@import 'game/form';
+@import 'game/info';
