--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -56,7 +56,8 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
 :root {
   font-size: 18px;
-  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif; }
+  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
+  box-sizing: border-box; }
 
 .container {
   margin: 0 auto;
@@ -64,33 +65,15 @@
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif; }
   @media screen and (max-width: 55.8rem) {
     .container {
-      width: 85%; } }
+      width: 98%; } }
   @media screen and (min-width: 55.8rem) {
     .container {
-      width: 60%; } }
+      width: 70%; } }
 
 body {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
   font-size: 1rem;
-  margin: 1rem; }
-
-ol, ul {
-  padding-left: 30px; }
-
-/*.board-row:after
-{
-    clear: both;
-    content: "";
-    display: table;
-}*/
-.board-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center; }
-
-.status {
-  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
-  margin-bottom: 10px; }
+  margin: 0 1rem; }
 
 .square {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
@@ -112,19 +95,31 @@ ol, ul {
 .kbdnavigation .square:focus {
   background: #ddd; }
 
+.square-highlight {
+  background-color: blue;
+  color: white; }
+
+ol, ul {
+  padding-left: 30px; }
+
+/*.board-row:after
+{
+    clear: both;
+    content: "";
+    display: table;
+}*/
+.board-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+
+.status {
+  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
+  margin-bottom: 10px; }
+
 .game {
   display: flex;
   flex-direction: column; }
-
-.game-box {
-  justify-content: center;
-  display: flex; }
-  @media screen and (max-width: 34.5rem) {
-    .game-box {
-      flex-direction: column; } }
-  @media screen and (min-width: 34.5rem) {
-    .game-box {
-      flex-direction: row; } }
 
 .game-title {
   font-weight: bold;
@@ -137,17 +132,37 @@ ol, ul {
     .game-title {
       font-size: 2rem; } }
 
-.game-info {
-  text-align: center; }
+.game-box {
+  justify-content: center;
+  display: flex;
+  margin-bottom: 4rem; }
   @media screen and (max-width: 34.5rem) {
-    .game-info {
-      margin-top: 1rem; } }
+    .game-box {
+      flex-direction: column; } }
   @media screen and (min-width: 34.5rem) {
-    .game-info {
-      margin-left: 1rem; } }
+    .game-box {
+      flex-direction: row; } }
 
 .game-board {
-  justify-content: center; }
+  display: flex;
+  flex-grow: 3;
+  flex-direction: column;
+  justify-content: center;
+  border: 0.05px solid black;
+  padding: 1rem; }
+
+.game-form {
+  display: flex;
+  margin: 1rem; }
+  @media screen and (max-width: 34.5rem) {
+    .game-form {
+      flex-direction: column; } }
+  @media screen and (min-width: 34.5rem) {
+    .game-form {
+      flex-direction: row; } }
+  .game-form .game-form-item {
+    flex: 1;
+    margin: 0 1rem; }
 
 .game-reset {
   padding: 0.05rem;
@@ -155,5 +170,24 @@ ol, ul {
   margin: 1rem;
   border: 0.05rem solid black;
   cursor: pointer; }
+
+.game-info {
+  flex-grow: 1;
+  text-align: left;
+  border: 0.05px solid black;
+  padding: 1rem; }
+  @media screen and (max-width: 34.5rem) {
+    .game-info {
+      margin-top: 1rem; } }
+  @media screen and (min-width: 34.5rem) {
+    .game-info {
+      margin-left: 1rem; } }
+
+input[type=number] {
+  line-height: 1.2rem;
+  padding: 0.2rem 0.5rem; }
+
+input[type=submit] {
+  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif; }
 
 /*# sourceMappingURL=index.css.map */
