Updated some styling to the board based on additoin of new elements

--- a/src/styles/scss/game/_game.scss
+++ b/src/styles/scss/game/_game.scss
@@ -24,11 +24,11 @@
     justify-content: center;
     display: flex;
     margin-bottom: 4rem;
-    @include until($mobile)
+    @include until($tablet)
     {
         flex-direction: column;
     }
-    @include from($mobile)
+    @include from($tablet)
     {
         flex-direction: row;
     }
@@ -47,43 +47,15 @@
     padding: 1rem;
 }
 
-.game-form
-{
-    display: flex;
-    margin: 1rem;
-    @include until($mobile)
-    {
-        flex-direction: column;
-    }
-    @include from($mobile)
-    {
-        flex-direction: row;
-    }
-    .game-form-item
-    {
-        flex: 1;
-        margin: 0 1rem;
-    }
-}
-
-.game-reset
-{
-    padding: 0.05rem;
-    text-align: center;
-    margin: 1rem;
-    border: 0.05rem solid black;
-    cursor: pointer;
-}
-
 .game-info
 {
     flex-grow: 1;
     text-align: left;
-    @include until($mobile)
+    @include until($tablet)
     {
         margin-top: 1rem;
     }
-    @include from($mobile)
+    @include from($tablet)
     {
         margin-left: 1rem;
     }
