--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -68,7 +68,7 @@
       width: 98%; } }
   @media screen and (min-width: 55.8rem) {
     .container {
-      width: 70%; } }
+      width: 90%; } }
 
 body {
   font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
@@ -136,10 +136,10 @@ ol, ul {
   justify-content: center;
   display: flex;
   margin-bottom: 4rem; }
-  @media screen and (max-width: 34.5rem) {
+  @media screen and (max-width: 55.8rem) {
     .game-box {
       flex-direction: column; } }
-  @media screen and (min-width: 34.5rem) {
+  @media screen and (min-width: 55.8rem) {
     .game-box {
       flex-direction: row; } }
 
@@ -151,43 +151,96 @@ ol, ul {
   border: 0.05px solid black;
   padding: 1rem; }
 
-.game-form {
-  display: flex;
-  margin: 1rem; }
-  @media screen and (max-width: 34.5rem) {
-    .game-form {
-      flex-direction: column; } }
-  @media screen and (min-width: 34.5rem) {
-    .game-form {
-      flex-direction: row; } }
-  .game-form .game-form-item {
-    flex: 1;
-    margin: 0 1rem; }
-
-.game-reset {
-  padding: 0.05rem;
-  text-align: center;
-  margin: 1rem;
-  border: 0.05rem solid black;
-  cursor: pointer; }
-
 .game-info {
   flex-grow: 1;
   text-align: left;
   border: 0.05px solid black;
   padding: 1rem; }
-  @media screen and (max-width: 34.5rem) {
+  @media screen and (max-width: 55.8rem) {
     .game-info {
       margin-top: 1rem; } }
-  @media screen and (min-width: 34.5rem) {
+  @media screen and (min-width: 55.8rem) {
     .game-info {
       margin-left: 1rem; } }
 
 input[type=number] {
   line-height: 1.2rem;
-  padding: 0.2rem 0.5rem; }
+  padding: 0.2rem 0.5rem;
+  width: 3rem;
+  display: inline-block; }
 
 input[type=submit] {
-  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif; }
+  font-family: "PT Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", "Calibri", "Ubuntu", "Ubuntu Mono", "Roboto", "Oxygen", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", serif;
+  width: 100%;
+  padding: 0.05rem;
+  text-align: center;
+  cursor: pointer;
+  line-height: 1.2rem; }
+
+.game-form {
+  display: flex;
+  margin: 0.5rem 1rem; }
+  @media screen and (max-width: 55.8rem) {
+    .game-form {
+      flex-direction: column; } }
+  @media screen and (min-width: 55.8rem) {
+    .game-form {
+      flex-direction: row; } }
+
+.game-form-item {
+  margin: 0 1rem; }
+  .game-form-item.submit {
+    line-height: 1.2rem;
+    align-content: center;
+    margin: auto 0;
+    text-align: center; }
+  .game-form-item:nth-child(1) {
+    flex: 1; }
+  .game-form-item:nth-child(2) {
+    flex: 4; }
+  .game-form-item:nth-child(3) {
+    flex: 1; }
+
+.game-form-players {
+  padding: 0.2rem 0.5rem;
+  line-height: 1.2rem;
+  display: flex;
+  flex-direction: row; }
+  .game-form-players > label {
+    flex: 1;
+    display: inline-block;
+    text-align: right;
+    padding-right: 1rem; }
+  .game-form-players > select {
+    flex: 1;
+    display: inline-block; }
+
+.game-reset {
+  padding: 0.05rem;
+  text-align: center;
+  margin: 0rem 1rem;
+  border: 0.05rem solid black;
+  cursor: pointer; }
+
+.game-players {
+  display: flex;
+  margin: 0.5rem 1rem; }
+  @media screen and (max-width: 34.5rem) {
+    .game-players {
+      flex-direction: column; } }
+  @media screen and (min-width: 34.5rem) {
+    .game-players {
+      flex-direction: row; } }
+
+.game-players div {
+  border: 0.04rem solid black;
+  padding: 0.05rem 1rem;
+  margin: 0rem 1rem;
+  flex: 1;
+  text-align: center; }
+
+.player-highlight {
+  color: white;
+  background-color: black; }
 
 /*# sourceMappingURL=index.css.map */
