Updated styling to game info box by scrolling on larger heights

--- a/src/styles/scss/game/_game.scss
+++ b/src/styles/scss/game/_game.scss
@@ -30,6 +30,7 @@
     }
     @include from($tablet)
     {
+        max-height: 30rem;
         flex-direction: row;
     }
 }
@@ -47,21 +48,3 @@
     padding: 1rem;
 }
 
-.game-info
-{
-    flex-grow: 1;
-    text-align: left;
-    @include until($tablet)
-    {
-        margin-top: 1rem;
-    }
-    @include from($tablet)
-    {
-        margin-left: 1rem;
-    }
-    @if $mode == debug
-    {
-        border: 0.05px solid black;
-    }
-    padding: 1rem;
-}
