--- a/src/styles/scss/game/_form.scss
+++ b/src/styles/scss/game/_form.scss
@@ -33,10 +33,10 @@ input[type=submit]
 .game-form-item
 {
     margin: 0 1rem;
+    justify-content: center;
     &.submit
     {
         line-height: 1.2rem;
-        align-content: center;
         margin: auto 0;
         text-align: center;
     }
