--- a/src/styles/scss/game/_info.scss
+++ b/src/styles/scss/game/_info.scss
@@ -17,3 +17,15 @@
     }
     padding: 1rem;
 }
+
+.game-move-item
+{
+    cursor: pointer;
+    color: black;
+    background-color: white;
+    &:hover
+    {
+        color: white;
+        background-color: black;
+    }
+}
