Moved all the code to board-one-d and board-two-d folders

--- a/src/styles/css/board-one-d/index.css
+++ b/src/styles/css/board-one-d/index.css
@@ -91,6 +91,8 @@ body {
   width: 3rem; }
   .square:focus {
     outline: none; }
+  .square:hover {
+    cursor: pointer; }
 
 .kbdnavigation .square:focus {
   background: #ddd; }
